--- a/lectures/style.css
+++ b/lectures/style.css
@@ -7,18 +7,27 @@
     font-size: 1.5em;
     font-variant: normal;
     font-weight: bold;
+    text-align: center;
+
 }
 
 .reveal h1.title  {
     font-size: 2em;
     font-variant: normal;
     font-weight: bold;
+    text-align: center;
+
+}
+
+.slide {
+    text-align: left;
 }
 
 td {
   position:relative;
   top: -100%;
   vertical-align: top;
+  text-align:left;
 }
 
 #left {
@@ -33,7 +42,7 @@ td {
   left:31.25%;
   top: 75px;
   float: right;
-  text-align: right;
+  text-align: left;
   z-index:-10;
   width:50%;
 }
@@ -51,13 +60,26 @@ td {
   font-size: 36px;
   font-weight: normal;
   color: #222; }
+  
 
 .reveal section img {
-  margin: 0px 0px;
+  display: block;
+  margin: auto;
   background: rgba(255, 255, 255, 0.12);
   border: none;
   box-shadow: 0 0 0 0;
-  text-align:center;
+  text-align: center;
+
+}
+
+img{
+  display: block;
+  margin: auto;
+  background: rgba(255, 255, 255, 0.12);
+  border: none;
+  box-shadow: 0 0 0 0;
+  text-align: center;
+  
 }
   
 .reveal pre {
@@ -70,4 +92,6 @@ td {
   font-family: monospace;
   line-height: 1.2em;
   word-wrap: break-word;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); 
+  
+}
